--- a/ii_projects/1-)cryptoverse/index.html
+++ b/ii_projects/1-)cryptoverse/index.html
@@ -264,7 +264,6 @@
           <div class="col">
             <div id="section-card">
               <!-- Icon -->
-              <i class="fa-solid fa-circle-user"></i>
 
               <div>
                 <h5></h5>
@@ -291,7 +290,6 @@
           <div class="col">
             <div id="section-card">
               <!-- Icon -->
-              <i class="fa-solid fa-circle-user"></i>
 
               <div>
                 <h5></h5>
@@ -318,7 +316,6 @@
           <div class="col">
             <div id="section-card">
               <!-- Icon -->
-              <i class="fa-solid fa-circle-user"></i>
 
               <div>
                 <h5></h5>
@@ -356,17 +353,16 @@
         </div>
 
         <!-- Testimonials Card Wrapper -->
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-5">
           <!-- Testimonials Card-1 -->
           <div class="col">
-            <div id="section-card">
-              <div>
+            <div id="testimonial-card" class="text-start">
+              <div class="d-flex align-items-center gap-4 mb-3">
                 <!-- Icon -->
-                <i class="fa-solid fa-circle-user"></i>
+                <i class="fa-solid fa-circle-user" id="user-icon"></i>
                 <!-- Person Detail -->
                 <div>
                   <h5>John D.</h5>
-
                   <span>Active Trader</span>
                 </div>
               </div>
@@ -387,10 +383,10 @@
           </div>
           <!-- Testimonials Card-2 -->
           <div class="col">
-            <div id="section-card">
-              <div>
+            <div id="testimonial-card" class="text-start">
+              <div class="d-flex align-items-center gap-4 mb-3">
                 <!-- Icon -->
-                <i class="fa-solid fa-circle-user"></i>
+                <i class="fa-solid fa-circle-user" id="user-icon"></i>
                 <!-- Person Detail -->
                 <div>
                   <h5>Sarah M.</h5>
@@ -415,10 +411,10 @@
           </div>
           <!-- Testimonials Card-3 -->
           <div class="col">
-            <div id="section-card">
-              <div>
+            <div id="testimonial-card" class="text-start">
+              <div class="d-flex align-items-center gap-4 mb-3">
                 <!-- Icon -->
-                <i class="fa-solid fa-circle-user"></i>
+                <i class="fa-solid fa-circle-user" id="user-icon"></i>
 
                 <!-- Person Detail -->
 
@@ -445,6 +441,363 @@
         </div>
       </div>
     </section>
+
+    <!-- * News -->
+    <section id="news">
+      <div class="container py-5">
+        <!-- News Title -->
+        <h1 class="text-center fs-1 fw-bold">Latest Crypto News</h1>
+
+        <!-- News Description  -->
+        <p class="text-center lead">
+          Stay updated with the latest developments in the crypto world
+        </p>
+
+        <!-- Cards Wrapper -->
+        <div class="row g-4 mt-4">
+          <!-- Column-1  -->
+          <div class="col-md-6">
+            <!-- Card-1 -->
+            <div class="card" id="news-card">
+              <!-- Image && Category -->
+              <figure>
+                <img
+                  src="images/news-1.webp"
+                  class="card-img-top"
+                  alt="news-1"
+                />
+                <p class="news-category">Market Analysis</p>
+              </figure>
+
+              <!-- Card Body -->
+              <div class="card-body">
+                <!-- News Title -->
+                <h5 class="card-title">Bitcoin Reaches New All-Time High</h5>
+
+                <!-- News Description -->
+                <p class="card-text">
+                  Bitcoin has surged past $45,000, marking a new milestone in
+                  its price history...
+                </p>
+
+                <!-- News Data -->
+                <div class="d-flex align-items-center gap-3">
+                  <!-- Published Time -->
+                  <p class="text-muted">
+                    <i class="fa-regular fa-clock"></i>
+                    <span>2 hours ago</span>
+                  </p>
+                  <!-- Comments -->
+                  <p class="text-muted">
+                    <i class="fa-regular fa-comment"></i>
+                    <span>24 comments</span>
+                  </p>
+                </div>
+
+                <!-- Button -->
+                <button class="btn btn-outline-primary">Read More</button>
+              </div>
+            </div>
+          </div>
+
+          <!-- Column-2  -->
+          <div class="col-md-6">
+            <!-- Card-2 -->
+            <div class="card" id="news-card">
+              <!-- Image && Category -->
+              <figure>
+                <img
+                  src="images/news-2.webp"
+                  class="card-img-top"
+                  alt="news-1"
+                />
+                <p class="news-category">Technology</p>
+              </figure>
+
+              <!-- Card Body -->
+              <div class="card-body">
+                <!-- News Title -->
+                <h5 class="card-title">
+                  Ethereum 2.0 Update Successfully Implemented
+                </h5>
+
+                <!-- News Description -->
+                <p class="card-text">
+                  The Ethereum network has completed its major upgrade,
+                  promising improved scalability...
+                </p>
+
+                <!-- News Data -->
+                <div class="d-flex align-items-center gap-3">
+                  <!-- Published Time -->
+                  <p class="text-muted">
+                    <i class="fa-regular fa-clock"></i>
+                    <span>4 hours ago</span>
+                  </p>
+                  <!-- Comments -->
+                  <p class="text-muted">
+                    <i class="fa-regular fa-comment"></i>
+                    <span>18 comments</span>
+                  </p>
+                </div>
+
+                <!-- Button -->
+                <button class="btn btn-outline-primary">Read More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- * Contact -->
+    <section id="contact">
+      <div class="container py-5">
+        <div class="text-center">
+          <!-- Title -->
+          <h1 class="fs-1 fw-bold">Get in Touch</h1>
+
+          <!-- Description -->
+          <p class="lead text-muted">
+            Have questions? We'd love to hear from you
+          </p>
+        </div>
+
+        <!-- Wrapper -->
+        <div class="row mt-4" id="contact-wrapper">
+          <!-- Info Column -->
+          <div class="col-md-6">
+            <!-- Title -->
+            <h1>Contact Information</h1>
+
+            <!-- Info Item-1 -->
+            <div class="d-flex gap-3 my-4">
+              <i class="fa-solid fa-location-dot" id="info-item-icon"></i>
+              <div>
+                <h4>Address</h4>
+                <p>123 Crypto Street, Digital City, 12345</p>
+              </div>
+            </div>
+            <!-- Info Item-2 -->
+            <div class="d-flex gap-3 my-4">
+              <i class="fa-solid fa-phone" id="info-item-icon"></i>
+
+              <div>
+                <h4>Phone</h4>
+                <p>+1 (555) 123-4567</p>
+              </div>
+            </div>
+            <!-- Info Item-3 -->
+            <div class="d-flex gap-3 my-4">
+              <i class="fa-solid fa-envelope" id="info-item-icon"></i>
+
+              <div>
+                <h4>Email</h4>
+                <p>info@cryptoverse.com</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Form Column -->
+          <div class="col-md-6">
+            <form>
+              <!-- Name Input -->
+              <input
+                type="text"
+                class="form-control mb-3"
+                placeholder="Your Name"
+              />
+
+              <!-- Email Input -->
+              <input
+                type="email"
+                class="form-control mb-3"
+                placeholder="Your Email"
+              />
+
+              <!-- Subject Input -->
+              <input
+                type="text"
+                class="form-control mb-3"
+                placeholder="Your Subject"
+              />
+
+              <!-- Textarea -->
+              <textarea
+                class="form-control mb-3"
+                rows="5"
+                placeholder="Your message"
+              ></textarea>
+
+              <!-- Button -->
+              <button class="btn btn-primary">Send message</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- * Footer -->
+    <footer>
+      <div class="container">
+        <!-- Top -->
+        <div
+          class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4"
+        >
+          <!-- Column-1 -->
+          <div class="col mb-5">
+            <!-- Logo -->
+            <h3>
+              <i class="fa-solid fa-globe" id="logo"></i>
+              CryptoVerse
+            </h3>
+
+            <!-- Description -->
+            <p class="lead text-white-50">
+              Your trusted platform for cryptocurrency information and trading.
+            </p>
+
+            <!-- Badge -->
+            <div>
+              <span class="badge bg-white text-dark">
+                <i class="fa-solid fa-lock"></i>
+                Secure
+              </span>
+              <span class="badge bg-white text-dark">
+                <i class="fa-solid fa-shield-halved"></i>
+                Verified
+              </span>
+              <span class="badge bg-white text-dark">
+                <i class="fa-solid fa-bolt"></i>
+                Fast
+              </span>
+            </div>
+          </div>
+
+          <!-- Column-2 -->
+          <div class="col mb-5">
+            <!-- Title -->
+            <h3>Quick Links</h3>
+
+            <!-- List -->
+            <ul class="list-unstyled mt-3">
+              <li>
+                <a class="text-decoration-none text-white-50" href="#">Home</a>
+              </li>
+              <li>
+                <a class="text-decoration-none text-white-50" href="#"
+                  >Cryptos</a
+                >
+              </li>
+              <li>
+                <a class="text-decoration-none text-white-50" href="#">News</a>
+              </li>
+              <li>
+                <a class="text-decoration-none text-white-50" href="#"
+                  >Contact</a
+                >
+              </li>
+              <li>
+                <a class="text-decoration-none text-white-50" href="#">
+                  About Us</a
+                >
+              </li>
+            </ul>
+          </div>
+          <!-- Column-3 -->
+          <div class="col mb-5">
+            <h3>Resources</h3>
+
+            <!-- List -->
+            <ul class="list-unstyled mt-3">
+              <li>
+                <a class="text-decoration-none text-white-50" href="#">Blog</a>
+              </li>
+              <li>
+                <a class="text-decoration-none text-white-50" href="#"
+                  >Guides</a
+                >
+              </li>
+              <li>
+                <a class="text-decoration-none text-white-50" href="#">FAQ</a>
+              </li>
+              <li>
+                <a class="text-decoration-none text-white-50" href="#">API</a>
+              </li>
+              <li>
+                <a class="text-decoration-none text-white-50" href="#">
+                  Status</a
+                >
+              </li>
+            </ul>
+          </div>
+          <!-- Column-4 -->
+          <div class="col mb-5">
+            <!-- Title -->
+            <h3>Newsletter</h3>
+
+            <!-- Description -->
+            <p>Subscribe to our newsletter for the latest updates.</p>
+
+            <!-- Form -->
+            <form class="d-flex input-group">
+              <input
+                type="email"
+                class="form-control bg-dark border-secondary"
+              />
+              <button class="btn btn-primary">
+                <i class="fa-solid fa-paper-plane"></i>
+              </button>
+            </form>
+
+            <!-- Market -->
+            <div class="mt-4">
+              <!-- Text -->
+              <h6>Download App</h6>
+
+              <!-- Buttons -->
+              <div class="d-flex gap-2">
+                <!-- App Store -->
+                <button class="btn btn-outline-light btn-sm">
+                  <i class="fa-brands fa-apple"></i>
+                  App Store
+                </button>
+                <!-- Play Store -->
+                <button class="btn btn-outline-light btn-sm">
+                  <i class="fa-brands fa-google-play"></i>
+                  Play Store
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Copyright -->
+        <div class="row mt-5 py-4 align-items-center">
+          <!-- Copyrigt Text -->
+          <div class="col-md-6">
+            <p class="text-white-50">
+              &copy; 2025 CryptoVerse. All rights reserved.
+            </p>
+          </div>
+
+          <!-- Copyrigt Links -->
+          <div class="col-md-6">
+            <div
+              class="bg-danger d-flex gap-3 justify-content-center justify-content-md-end"
+            >
+              <a href="#" class="text-decoration-none text-white-50"
+                >Terms of Service</a
+              >
+              <a href="#" class="text-decoration-none text-white-50"
+                >Privacy Policy</a
+              >
+              <a href="#" class="text-decoration-none text-white-50">Cookies</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- * Bootstrap Js  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
